--- a/static/index.html
+++ b/static/index.html
@@ -116,10 +116,14 @@
         <hr class="border-t border-gruvbox-gray my-8">
 
         <h2 class="text-xl text-gruvbox-yellow font-normal mt-8 mb-6 relative">About Me</h2>
-        <p class="my-4">Hello! I'm a <span class="text-gruvbox-red font-bold">full-stack developer</span> specializing
-            in blockchain solutions and AI project development. I excel at designing and implementing secure, efficient
-            systems using Go, Rust, and Node.js. When I'm not coding, I enjoy traveling to far-off places and trying
-            exciting sports that get my heart racing. I'm always looking to grow my skills in both technology and
+        <p class="my-4">Hello! I'm a <span class="text-gruvbox-red font-bold">backend developer</span> passionate about
+            crafting tools that make life easier for both developers and users alike. I excel at designing and
+            implementing secure, efficient systems using Go, Rust, and Node.js. When I'm not coding, I enjoy traveling
+            to far-off places, exploring altered perspectives, and trying
+            exciting sports that get my heart racing. I'm always looking to <span class="relative group cursor-help">
+                <span class="bg-clip-text text-transparent bg-gradient-to-r from-gruvbox-purple via-gruvbox-blue to-gruvbox-green hover:from-gruvbox-red hover:via-gruvbox-yellow hover:to-gruvbox-aqua transition-all duration-700">expand my mind</span>
+                <span class="absolute hidden group-hover:inline-block bg-gruvbox-bg-soft text-gruvbox-yellow px-2 py-1 rounded shadow-lg -mt-8 ml-2">🍄</span>
+            </span> and grow my skills in both technology and
             leadership.</p>
 
         <blockquote class="border-l-4 border-gruvbox-aqua pl-4 my-4 text-gruvbox-fg-dim">
@@ -131,12 +135,12 @@
             <li>Rust</li>
             <li>Go lang</li>
             <li>TS/Js</li>
-            <li>Blockchain Solutions</li>
             <li>AI Project Development</li>
             <li>Microservices Architecture</li>
             <li>Databases (MongoDB, PostgreSQL, Redis, Dynamo, etc.)</li>
             <li>Cloud (AWS, Azure, GCP)</li>
             <li>DevOps (Linux, Docker, Kubernetes, CI/CD)</li>
+            <li>Blockchain Solutions</li>
         </ul>
 
         <h2 class="text-xl text-gruvbox-yellow font-normal mt-8 mb-6 relative">Projects</h2>
