--- a/static/index.html
+++ b/static/index.html
@@ -121,8 +121,11 @@
             implementing secure, efficient systems using Go, Rust, and Node.js. When I'm not coding, I enjoy traveling
             to far-off places, exploring altered perspectives, and trying
             exciting sports that get my heart racing. I'm always looking to <span class="relative group cursor-help">
-                <span class="bg-clip-text text-transparent bg-gradient-to-r from-gruvbox-purple via-gruvbox-blue to-gruvbox-green hover:from-gruvbox-red hover:via-gruvbox-yellow hover:to-gruvbox-aqua transition-all duration-700">expand my mind</span>
-                <span class="absolute hidden group-hover:inline-block bg-gruvbox-bg-soft text-gruvbox-yellow px-2 py-1 rounded shadow-lg -mt-8 ml-2">🍄</span>
+                <span
+                    class="bg-clip-text text-transparent bg-gradient-to-r from-gruvbox-purple via-gruvbox-blue to-gruvbox-green hover:from-gruvbox-red hover:via-gruvbox-yellow hover:to-gruvbox-aqua transition-all duration-700">expand
+                    my mind</span>
+                <span
+                    class="absolute hidden group-hover:inline-block bg-gruvbox-bg-soft text-gruvbox-yellow px-2 py-1 rounded shadow-lg -mt-8 ml-2">🍄</span>
             </span> and grow my skills in both technology and
             leadership.</p>
 
@@ -153,7 +156,9 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                         class="mr-1">
-                        <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon>
+                        <polygon
+                            points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2">
+                        </polygon>
                     </svg>
                     <span class="github-stars" data-repo="Abraxas-365/langchain-rust">--</span>
                 </div>
@@ -179,7 +184,9 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                         class="mr-1">
-                        <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon>
+                        <polygon
+                            points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2">
+                        </polygon>
                     </svg>
                     <span class="github-stars" data-repo="Abraxas-365/r_clip">--</span>
                 </div>
@@ -205,7 +212,9 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                         class="mr-1">
-                        <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon>
+                        <polygon
+                            points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2">
+                        </polygon>
                     </svg>
                     <span class="github-stars" data-repo="Abraxas-365/open-gh-copilot">--</span>
                 </div>
@@ -226,12 +235,15 @@
         <!-- Project 4 -->
         <div class="border border-gruvbox-gray rounded-md p-4 mb-6">
             <div class="flex flex-col sm:flex-row justify-between sm:items-center">
-                <h3 class="text-lg text-gruvbox-yellow font-normal mt-0 mb-4 sm:mb-0 relative">Polyglot Lambda Examples</h3>
+                <h3 class="text-lg text-gruvbox-yellow font-normal mt-0 mb-4 sm:mb-0 relative">Polyglot Lambda Examples
+                </h3>
                 <div class="flex items-center mb-4 sm:mb-0 text-gruvbox-yellow">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                         class="mr-1">
-                        <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon>
+                        <polygon
+                            points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2">
+                        </polygon>
                     </svg>
                     <span class="github-stars" data-repo="Abraxas-365/polyglot-lambda-examples">--</span>
                 </div>
@@ -252,12 +264,15 @@
         <!-- Project 5 -->
         <div class="border border-gruvbox-gray rounded-md p-4 mb-6">
             <div class="flex flex-col sm:flex-row justify-between sm:items-center">
-                <h3 class="text-lg text-gruvbox-yellow font-normal mt-0 mb-4 sm:mb-0 relative">Go Vertical Slice Architecture</h3>
+                <h3 class="text-lg text-gruvbox-yellow font-normal mt-0 mb-4 sm:mb-0 relative">Go Vertical Slice
+                    Architecture</h3>
                 <div class="flex items-center mb-4 sm:mb-0 text-gruvbox-yellow">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                         class="mr-1">
-                        <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon>
+                        <polygon
+                            points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2">
+                        </polygon>
                     </svg>
                     <span class="github-stars" data-repo="sebajax/go-vertical-slice-architecture">--</span>
                 </div>
@@ -279,12 +294,15 @@
         <!-- Project 6 -->
         <div class="border border-gruvbox-gray rounded-md p-4 mb-6">
             <div class="flex flex-col sm:flex-row justify-between sm:items-center">
-                <h3 class="text-lg text-gruvbox-yellow font-normal mt-0 mb-4 sm:mb-0 relative">LangChain Go Contributor</h3>
+                <h3 class="text-lg text-gruvbox-yellow font-normal mt-0 mb-4 sm:mb-0 relative">LangChain Go Contributor
+                </h3>
                 <div class="flex items-center mb-4 sm:mb-0 text-gruvbox-yellow">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                         class="mr-1">
-                        <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon>
+                        <polygon
+                            points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2">
+                        </polygon>
                     </svg>
                     <span class="github-stars" data-repo="tmc/langchaingo">--</span>
                 </div>
@@ -304,6 +322,25 @@
 
         <h2 class="text-xl text-gruvbox-yellow font-normal mt-8 mb-6 relative">Experience</h2>
 
+        <h3 class="text-lg text-gruvbox-yellow font-normal mt-8 mb-4 relative">Tech Lead | Impulse</h3>
+        <p class="my-2"><span class="text-gruvbox-green italic">2025 - Present</span></p>
+        <p class="my-2"><span class="text-gruvbox-blue">Notable Clients: Pluxee, Auna, Sodexo, Makro, PUCP</span></p>
+        <ul class="pl-6">
+            <li>Leading a high-performance engineering team of developers, orchestrating multiple concurrent
+                projects across different technology stacks</li>
+            <li>Spearheading the implementation of AI solutions, including LLM-based projects like Conversia, to
+                automate customer interactions</li>
+            <li>Designing and developing microservices architecture to support scalable business operations and improve
+                system reliability</li>
+            <li>Creating internal development tools and establishing standardized workflows to enhance team productivity
+                and code quality</li>
+            <li>Managing technical debt and system optimization initiatives, resulting in improved performance and
+                reduced operational costs</li>
+            <li>Architecting and implementing large-scale system migrations and integrations, particularly with HubSpot
+                CRM ecosystem</li>
+            <li>Collaborating with stakeholders to align technical solutions with business objectives, ensuring
+                successful project delivery for enterprise clients</li>
+        </ul>
         <h3 class="text-lg text-gruvbox-yellow font-normal mt-8 mb-4 relative">Founder & Developer | InEdge LLC</h3>
         <p class="my-2"><span class="text-gruvbox-green italic">2024 - Present</span></p>
         <p class="my-2"><span class="text-gruvbox-blue">Location: Delaware, USA</span></p>
@@ -367,7 +404,7 @@
 
     <!-- Script to fetch GitHub stars -->
     <script>
-        document.addEventListener('DOMContentLoaded', async function() {
+        document.addEventListener('DOMContentLoaded', async function () {
             // Function to fetch GitHub stars
             async function fetchGitHubStars(repo) {
                 try {
@@ -387,7 +424,7 @@
 
             // Get all elements with github-stars class
             const starElements = document.querySelectorAll('.github-stars');
-            
+
             // Fetch and update stars for each repo
             starElements.forEach(async (element) => {
                 const repo = element.getAttribute('data-repo');
